# BasisSetGenerator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
basis_sets/: 3-21G-basis.csv  6-311++G(2d,2p)-basis.csv  6-311G(d,p)-basis.csv  6-311g_st__st_-rifit.csv  6-31G(d,p)-basis.csv  6-31g_st__st_-rifit.csv  PTB-vDZP.csv  STO-3G-basis.csv  admm-1.csv  admm-2.csv  admm-3.csv  aug-admm-1.csv  aug-admm-2.csv  aug-admm-3.csv  aug-cc-pv5z-optri.csv  aug-cc-pv5z-pp-optri.csv  aug-cc-pv5z-pp-rifit.csv  aug-cc-pv5z-rifit.csv  aug-cc-pv6z-rifit.csv  aug-cc-pvdz-optri.csv  aug-cc-pvdz-pp-optri.csv  aug-cc-pvdz-pp-rifit.csv  aug-cc-pvdz-rifit.csv  aug-cc-pvqz-optri.csv  aug-cc-pvqz-pp-optri.csv  aug-cc-pvqz-pp-rifit.csv  aug-cc-pvqz-rifit.csv  aug-cc-pvtz-optri.csv  aug-cc-pvtz-pp-optri.csv  aug-cc-pvtz-pp-rifit.csv  aug-cc-pvtz-rifit.csv  aug-cc-pwcv5z-pp-optri.csv  aug-cc-pwcv5z-pp-rifit.csv  aug-cc-pwcv5z-rifit.csv  aug-cc-pwcvdz-pp-optri.csv  aug-cc-pwcvdz-pp-rifit.csv  aug-cc-pwcvdz-rifit.csv  aug-cc-pwcvqz-pp-optri.csv  aug-cc-pwcvqz-pp-rifit.csv  aug-cc-pwcvqz-rifit.csv  (+76 more)
src/: BasisSetConverter.cpp  basis_set_helper.cpp  basis_set_helper.h  create_basis_sets.py
